<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.stevenhia.blixmov.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.stevenhia.blixmov.ui.fragment.genre.GenreFragment"
        android:label="@string/title_genres"
        tools:layout="@layout/fragment_genre" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.stevenhia.blixmov.ui.fragment.notifications.NotificationsFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>