<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:scrollbars="none"
    tools:context=".ui.activity.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backGround"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_single_movie_Details"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/adultCheckLayout_movieDetails"
            android:layout_width="38dp"
            android:layout_height="22dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/adult_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_adult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/number_18"
                android:textColor="#B3F2B833"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@drawable/poster_dash_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2_title_movieDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_single_movie_Details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/title_single_movie_Details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/aldrich"
                android:maxLines="2"
                android:textColor="@color/light_gray"
                android:textSize="27sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/date_single_movie_Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/aldrich"
                    android:maxLines="2"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    tools:text="21/08/2022" />

                <LinearLayout
                    android:layout_width="28dp"
                    android:layout_height="18dp"
                    android:background="@drawable/hd_bg">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/aldrich"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="@string/tv_hd"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/genre1_movie_Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/aldrich"
                    android:maxLines="2"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/genre2Layout_movie_Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <LinearLayout
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_bg" />

                    <TextView
                        android:id="@+id/genre2_movie_Details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/aldrich"
                        android:maxLines="2"
                        android:textSize="12sp" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/descLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2_title_movieDetails">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/text_overview"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieOverview_MovieDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/aldrich"
                android:maxLines="8"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/view_VideoTrailer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/video_trailer"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_videoTrailer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_VideoTrailer"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_video_trailer" />

                <TextView
                    android:id="@+id/view_Status_VideoTrailer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/empty_video_trailer"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/aldrich"
                android:gravity="center_vertical"
                android:text="@string/tv_cast"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCastPeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/aldrich"
                android:gravity="center_vertical"
                android:text="@string/tv_crew"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCrewPeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/aldrich"
                android:gravity="center_vertical"
                android:text="@string/tv_reviews"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>