<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:scrollbars="none"
    tools:context=".ui.fragment.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/image_slider_movieFragment"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="bottom|center_horizontal"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="1dp"
            app:sliderIndicatorSelectedColor="@color/primary"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="4"
            app:sliderStartAutoCycle="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/popular_movies"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/popular_seeAll" />

        <TextView
            android:id="@+id/popular_seeAll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/see_all"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_slider_movieFragment" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopularMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popular_seeAll" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/top_rated"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/topRated_seeAll" />

        <TextView
            android:id="@+id/topRated_seeAll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/see_all"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvPopularMovie" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTopRatedMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topRated_seeAll" />

        <!--<LinearLayout
            android:id="@+id/topRated_MovieLayout_movieFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popular_MovieLayout_movieFrag">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/aldrich"
                    android:gravity="center_vertical"
                    android:text="@string/top_rated"
                    android:textColor="@color/primary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/topRated_MovieSeeAll_movieFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/aldrich"
                    android:gravity="center_vertical"
                    android:text="@string/see_all"
                    android:textColor="@color/primary"
                    android:textSize="16sp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topRatedMovieRecView_moviesFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp" />

        </LinearLayout>-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutConst_NoNetwork"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageNoConnection"
                android:layout_width="250dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_no_internet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:text="@string/no_internet"
                android:textColor="@color/primary"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageNoConnection" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>